# legal-doc-diff-rag

./: .gitignore  README.md  main.py  pyproject.toml
configs/components/chunking/: example_fixed_size.yaml
configs/components/llm/: example.yaml
configs/components/rag/: example.yaml
configs/experiments/: example.yaml
docs/: setup.md
src/: schemas.py
src/core/: embedding.py  vectorstore.py
src/core/chunker/: base.py  factory.py  fixed_size.py  hierarchical.py  test_chunking.py
src/core/embedding/: embedding.py  onnx_embedding.py
src/core/ingestion/: __init__.py  docx_loader.py  pdf_loader.py  text_cleaner.py
src/core/vector_store/: chroma_store.py  vectorstore.py
