[project]
name = "ttcs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"onnxruntime>=1.14.0",
	"transformers>=4.40.0",
	"sentencepiece",
	"safetensors",
	"numpy",
	"torch>=2.10.0",
	"onnxruntime-gpu>=1.24.2",
	"pydantic>=2.10.0",
	"chromadb>=1.5.2",
]

[tool.setuptools.packages.find]
where = ["."]
